--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,8 @@
         "psr-0": {
             "IainConnor\\PeaceKeeper\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "5.7"
     }
 }
